fix some overflow issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -184,6 +184,6 @@
     @apply text-4xl sm:text-6xl font-bold mb-6  bg-gradient-to-r from-white to-gray-400 bg-clip-text text-transparent w-fit mx-auto;
   }
   .subtitle {
-    @apply text-4xl sm:text-6xl font-bold mb-6 text-white w-fit mx-auto
+    @apply text-4xl sm:text-6xl font-bold mb-6 text-gray-300 w-fit mx-auto
   }
 }
